[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fermo_docs"
version = "1.0.0"
description = 'Documentation for FERMO'
readme = "README.md"
requires-python = ">=3.11"
license-files = { paths = ["LICENSE"] }
authors = [
  { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" },
]
dependencies = [
  "mkdocs-material~=9.5.23"
]
